2008-08-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/flumotion-admin-command.in:
	* flumotion/admin/command/main.py (added):
	* flumotion/admin/command/mains.py (deleted):
	  Rename module.

2008-08-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/Makefile.am:
	* configure.ac:
	* flumotion.spec.in:
	* flumotion/admin/command/Makefile.am:
	* bin/flumotion-command.in (deleted):
	* flumotion/admin/command/commands.py (deleted):
	* flumotion/admin/command/main.py (deleted):
	  Delete old flumotion-command.

2008-08-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/flumotion-admin-command.in (added):
	  Add main binary.

2008-08-12  Thomas Vander Stichele  <thomas at apestaart dot org>

	* bin/Makefile.am:
	* bin/flumotion-admin-command:
	* configure.ac:
	* flumotion/admin/command/common.py (added):
	* flumotion/admin/command/worker.py (added):
	* flumotion/admin/command/manager.py (added):
	* flumotion/admin/command/component.py (added):
	* flumotion/admin/command/mains.py (added):
	* flumotion/admin/command/Makefile.am:
	  Add new flumotion-admin-command, better abstracted, and using command
	  class.  This will replace flumotion-command.
	  Closes #725.

2008-08-12  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/configurationassistant.py:
	* flumotion/wizard/conversionsteps.py:
	Remember the muxer, audio and video encoders when switching
	pages. The wizard steps are not persistent, so store
	the persistent bits in the wizard itself instead.
	Fixes #1095

2008-08-12  Johan Dahlin  <johan@flumotion.com>

	* flumotion/wizard/__init__.py:
	Provide BW compat until we updated and rebuilt all
	external packages.

2008-08-12  Johan Dahlin  <johan@flumotion.com>

	* data/glade/overlay-wizard.glade: Add a tooltip for the
	show logo checkbutton. Fixes #1094

2008-08-11  Johan Dahlin  <johan@flumotion.com>

	* flumotion/wizard/Makefile.am (flumotion_PYTHON):
	And remove configurationwizard.py from here.
