@@ -1,7 +1,7 @@
 bin_SCRIPTS = \
 	flumotion-admin \
-	flumotion-admin-command \
 	flumotion-admin-text \
+	flumotion-command \
 	flumotion-inspect \
 	flumotion-job \
 	flumotion-launch \
